# erc-software-rover

./: .clang-format  .dir-locals.el  .dockerignore  .git-town.toml  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Justfile  README.md  charuco_camera_params.yml  cog.toml  colcon_defaults.yaml  compose.yaml  flake.nix  hx.toml  treefmt.toml  yolo_test.py
aruco-detection/: CMakeLists.txt  CalibrateCamera.cpp  DetectAruco.cpp
aruco-detection/learning_codes_python/: camera_calib_v2.py  camera_calibration.py  create_many_aruco_images.py  create_one_aruco_image.py  detect_live_feed_aruco_image.py  detect_one_aruco_image.py  detect_video_feed_aruco_image.py  generate_a4_charuco_board.py  video_aruco_2.py
aruco-detection/learning_codes_python/files/: charuco_camera_params.yml  tutorial_camera_params.yml
aruco-detection/math_codes/Vectors/: angle_between_two_vectors.py  direction_cosines.py  distance_between_vectors.py  dot_product._vectors.py  unit_vector_from_vector.py  vector_onto_vector.py
docs/: .gitignore  business-logic.cts
nix/repo/: dotfiles.nix  operables.nix  shells.nix
ros2_ws/cydonia/: .bash_history  .bashrc  .gitconfig  .lesshst  .new_file.py.swp  .realsense-config.json  .viminfo  .wget-hsts  .xsessionrc  ncommand.py  new_script.sh  stream.sh
ros2_ws/cydonia/.cache/: event-sound-cache.tdb.5dbfb12414a3456d9014d88183e338b1.aarch64-unknown-linux-gnu
ros2_ws/cydonia/.cache/fontconfig/: 2e755eb509a594ba7adde982574983b5-le64.cache-7  4bf34635-a03a-4f7c-8a07-e87edde641c2-le64.cache-7  945677eb7aeaf62f1d50efc3fb3ec7d8-le64.cache-7  a41116dafaf8b233ac2c61cb73f2ea5f-le64.cache-7  bf3b770c553c462765856025a94f1ce6-le64.cache-7  c17ee648-51fe-44d9-bc90-a090ff77995f-le64.cache-7  e8a7d76b-bb07-4b47-9c54-921cb45e355c-le64.cache-7
ros2_ws/cydonia/.cache/ubuntu-report/: ubuntu.22.04
ros2_ws/cydonia/.config/: QtProject.conf
ros2_ws/cydonia/.config/dconf/: user
ros2_ws/cydonia/.config/gtk-3.0/: bookmarks
ros2_ws/cydonia/.config/pulse/: 5dbfb12414a3456d9014d88183e338b1-card-database.tdb  5dbfb12414a3456d9014d88183e338b1-device-volumes.tdb  cookie
ros2_ws/cydonia/.config/ros.org/: rqt_gui.ini
ros2_ws/cydonia/.config/yelp/: yelp.cfg
ros2_ws/cydonia/.gnupg/: pubring.kbx  trustdb.gpg
ros2_ws/cydonia/.local/share/: recently-used.xbel  session_migration-ubuntu
ros2_ws/cydonia/.rviz2/: default.rviz  persistent_settings
ros2_ws/cydonia/.thunderbird/: installs.ini  profiles.ini
ros2_ws/cydonia/.thunderbird/98ydj9xa.default/: times.json
ros2_ws/cydonia/.w3m/: history
ros2_ws/cydonia/ros2_ws/: debug.txt
ros2_ws/cydonia/ros2_ws/slam/: CMakeLists.txt  (+1 more)
slam/config/: basic_params.yaml
src/aruco_track/: CMakeLists.txt  README.md  package.xml
src/aruco_track/assets/: charuco_camera_params.yml
src/aruco_track/src/: aruco_tf2_node.cpp
src/comms/: CMakeLists.txt  README.md  howto_compile.md  package.xml
src/comms/assets/: udp_client  udp_client.cpp  udp_server.cpp
src/comms/assets/test_payloads/: diagnostics_payload.cpp  gps_payload.cpp  imu_payload.cpp  ph_payload.cpp
src/comms/assets/test_payloads/sensor_board/: diagnostics_payload.cpp  diagnostics_payload.hpp  gps_payload.cpp  imu_payload.cpp  imu_payload.hpp  ph_payload.cpp
src/comms/config/: udp.yaml
src/comms/include/comms/udp/: handler.hpp  packet_header.hpp  utils.hpp
src/comms/include/comms/udp/handlers/: imu_handler.hpp
src/comms/include/comms/udp/handlers/sensor_board/: diagnostics_handler.hpp  gps_handler.hpp  imu_handler.hpp  ph_handler.hpp
src/comms/include/comms/udp_client/: gps_payload.hpp  ph_payload.hpp
src/comms/msg/: ImuSensorInformation.msg  SensorBoardDiagnostics.msg  SensorBoardGPSInfo.msg  SensorBoardPHInfo.msg  SensorState.msg
src/comms/src/: udp_client.cpp  udp_forwarder_node.cpp
src/comms/src/handlers/: diagnostics_handler.cpp  gps_handler.cpp  imu_handler.cpp  ph_handler.cpp
src/comms/src/handlers/sensor_board/: diagnostics_handler.cpp  gps_handler.cpp  imu_handler.cpp  ph_handler.cpp
src/comms/src/udp_client/: diagnostics_payload.cpp  gps_payload.cpp  imu_payload.cpp  ph_payload.cpp  udp_client.cpp
src/control_ert_rtw/: control.c  control.h  rtwtypes.h
src/hi_world/: CMakeLists.txt  package.xml  plugin.xml  world.sdf
src/hi_world/assets/launch/: sim.py
src/hi_world/assets/models/: robot.urdf
src/hi_world/assets/worlds/: sim.wbt
src/hi_world/launch/: sim.py  sim.xml
src/hi_world/models/: robot.urdf
src/hi_world/models/vehicle/: model.sdf
src/hi_world/rviz/: sim.rviz
src/hi_world/src/: robot.cpp
src/hi_world/worlds/: .sim.wbproj  .world.wbproj  sim.wbt  vehicle.sdf
src/obj_detection/: obj_detect.py  yolo_test.py
src/path_planning/: CMakeLists.txt  package.xml
src/path_planning/src/: path_planning.cpp
src/path_planning/tests/: fib.cpp  main.cpp
src/path_planning_interfaces/: CMakeLists.txt  package.xml
src/repo/: .gitignore
src/repo/conf/: distributions
src/rtt_aruco_track/: CMakeLists.txt  README.md  package.xml
src/rtt_aruco_track/assets/: install_deps.sh
src/rtt_aruco_track/src/: aruco_tf2_node.cpp
src/rtt_path_planning/: CMakeLists.txt  package.xml
src/rtt_path_planning/src/: path_planning.cpp
src/rtt_rover_control/: CMakeLists.txt  package.xml
src/rtt_simulation/: CMakeLists.txt  package.xml
src/rtt_simulation/include/: driver.hpp
src/rtt_slam/: CMakeLists.txt  package.xml
src/rtt_slam/launch/: slam_launch.py
src/simulation/: CMakeLists.txt  package.xml  plugin.xml
src/simulation/assets/launch/: sim.py  simulation.launch.py
src/simulation/assets/models/: rover.urdf
src/simulation/assets/models/vehicle/: model.sdf
src/simulation/assets/worlds/: simulation.wbt  vehicle.sdf
src/simulation/include/: driver.hpp
src/simulation/include/rtt_rover_control/: control.h  rtwtypes.h
src/simulation/include/rtt_rover_driver/: driver.hpp
src/simulation/src/: driver.cpp  robot.cpp
src/simulation/src/control/: control.c
src/simulation/src/driver/: driver.cpp
src/slam/: CMakeLists.txt  package.xml
src/slam/config/: pipeline_params.yaml  stvl_params.yaml
src/slam/launch/: slam_launch.py
(+2121 files in other folders)
