<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rtt_slam</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="cydonia@todo.todo">cydonia</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>gst_bridge</depend>
  <depend>nav2_bringup</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>realsense2_camera</depend>
  <depend>rtabmap_launch</depend>
  <depend>spatio_temporal_voxel_layer</depend>
  <depend>tf2_ros</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
